--- a/hw1.css
+++ b/hw1.css
@@ -1,7 +1,7 @@
 header{
     background-color: #000000;
     padding: 30px;
-    background-image: url("../images/flywheel.jpg");
+    background-image: url("ipl.jpeg");
     background-color: #ABCDFE;
     background-repeat: no-repeat;
     background-size: 100%;
