--- a/hw1.css
+++ b/hw1.css
@@ -22,7 +22,7 @@ h1{
 h2{
     color: #000000;
 }
-
+<!--
 .left {
     background-color: #808000;
     width: 24%;
@@ -41,7 +41,7 @@ h2{
     width: 80%;
     margin: 10%;
 }
-
+-->
 nav a{
     color: #000000;
     display: inline-block;
