--- a/hw1.css
+++ b/hw1.css
@@ -47,6 +47,7 @@ h2{
     text-decoration: none;
     padding: 2% 0%;
     text-align: center;
+float:right;
     background-color: rgba(255,255,255,0.25);
 }
 
